samples/_failures_safe/1761551464_93a304_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_457563b0.c: In function ‘main’:
./samples/SAFE/__tmp_457563b0.c:164:5: error: expected declaration or statement at end of input
  164 |     printf("\nAvailable compression methods:\n");
      |     ^~~~~~
